2005-03-09  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: Fix widget sensitivity problem, assign
	integer value instead of string to relationship type
	* src/FamilyView.py: fix child relationship display value
	* src/GrampsBSDDB.py: upgrade to DB version 4 (remove string 
	relationship types)
	* src/EditPerson.py: call new_after_edit instead of update_after_edit
	for new people.
	* src/EditPerson.py: add srcref as a drag and drop item
	* src/EditPlace.py: add srcref as a drag and drop item
	* src/Marriage.py: add srcref as a drag and drop item
	* src/WriteGedcom.py: catch empty event
	* src/Sources.py: add drag-n-drop for source references

2005-03-09  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (IsDefaultPerson,IsSiblingOfFilterMatch):
	Add filter rules.

2005-03-09  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/PedView.py: Import RelLib for accessing relationship constants.
	* src/NameEdit.py: Use empty Date for newly created name.

	* src/data/gramps.schemas: Place dont-ask key into interface dir.
	* src/Marriage.py (did_data_change): Compare gramps_id, not handle.

	* src/ReadXML.py (start_childof): Use integer relations.
	* src/WriteXML.py (write_xml_data): Properly test frel.
	* src/rule.glade: Change button label; add "need to close" label.
	* src/EditPlace.py: Typo.

	* src/FamilyView.py: Correct constants for birth relationship.
	* src/AddSpouse.py (select_spouse_clicked): Prevent adding child
	of the family as a spouse in that family.

2005-03-09  Don Allingham  <don@gramps-project.org>
	* src/NameEdit.py: assign date on close

2005-03-08  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: change _nsort to _model
	* src/GrampsBSDDB.py: fix event secondary index function to that
	the event name is used instead of the GRAMPS id.

2005-03-08 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/EditPerson.py: Remove numerous multiple definitions.