@@ -1,3 +1,9 @@
+2005-03-10  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/GenericFilter.py (IsBookmarked,IncompleteNames,
+	HaveAltFamilies,HavePhotos,HaveChildren,NeverMarried,
+	MultipleMarriages,NoBirthdate): Add filter rules.
+	* src/gramps_main.py (init_filters): Add new filters to the menu.
+
 2005-03-09  Don Allingham  <don@gramps-project.org>
 	* src/ChooseParents.py: Fix widget sensitivity problem, assign
 	integer value instead of string to relationship type
